<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="poster">poster</string>
    <string name="background_image">background image</string>
    <string name="user_score">User\nScore</string>
    <string name="overview">Overview</string>
    <string name="status">Status</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="type">Type</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="about_message">Developed by Deddy Romnan Rumapea\n\nIcons made by Freepik from Flaticon\n\nThis product uses the TMDb API but is not endorsed or certified by TMDb</string>
    <string name="error">Error</string>
    <string name="error_message">Oops, something went wrong</string>
    <string name="runtime_format">%s minutes</string>
    <string name="about">About</string>
    <string name="favorite">Favorite</string>
    <string name="favorited">Favorited</string>
    <string name="retry">Retry</string>
    <plurals name="seasons">
        <item quantity="one">%d Season</item>
        <item quantity="other">%d Seasons</item>
    </plurals>
</resources>