...
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/image_tvshow_backdrop"
            tools:text="Avengers : Infinity War (2016)" />

        <TextView
            android:id="@+id/text_user_score"
            style="@style/DisplayText.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_score"
            app:layout_constraintBottom_toBottomOf="@id/text_score"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_score"
            app:layout_constraintTop_toTopOf="@id/text_score" />

        <TextView
            android:id="@+id/text_score"
...
            android:paddingBottom="@dimen/padding_16dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/text_duration"
            tools:text="Adventure, Action, Science Fiction" />

        <TextView
            android:id="@+id/text_tagline"
            style="@style/DisplayText.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/padding_16dp"
...
