<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="favorite">Favorite</string>
    <string name="empty">It\'s empty</string>
</resources>